<resources>
    <string name="app_name">ShakoMako</string>
    <string name="cont_facebook">Continue with Facebook</string>
    <string name="cont_google">Continue with Google</string>
    <string name="cont_insta">Continue with Instagram</string>
    <string name="cont_number">Continue with Phone Number</string>
    <string name="check_account_text">Login to check your account:</string>
    <string name="number_hint">Enter Phone</string>
    <string name="verification_code_text">Send sms verification code</string>
    <string name="terms">By joining, you agree to our <font fgcolor="#1E90FF">Privacy &amp; Cookie Policy</font></string>
    <string name="facebook_app_id">163317108868391</string>
    <string name="msg_something_went_wrong">Something went wrong</string>
    <string name="base_url">http://ec2-3-142-205-39.us-east-2.compute.amazonaws.com:3000/</string>
    <string name="shared_pref_file">com.io.app.shakomako.shared.Preferences</string>
    <string name="no_internet">Please Check Your Internet</string>
    <string name="sms_verification">An SMS Verification Code has been sent to your Mobile Number</string>
    <string name="dummy_number">+911234567890</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend Now</string>
    <string name="resend_in">Resend In</string>
    <string name="resend_title">Didn\'t receive the SMS?</string>
    <string name="myshop">My Shop</string>
    <string name="trending">Trending</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="deals">My Deals</string>
    <string name="beauty">Beauty</string>
    <string name="fashion">Fashion</string>
    <string name="electronics">Electronics</string>
    <string name="travel">Travel</string>
    <string name="hotels">Hotels</string>
    <string name="submit">Submit</string>
    <string name="upload_bio_picture">Upload Bio Picture</string>
    <string name="business_bio_10000_characters">Business Bio(10000 characters)</string>
    <string name="business_location_zipcode">Business Location(Zipcode)</string>
    <string name="business_name">Business Name</string>
    <string name="register_business">Register Business</string>
    <string name="pickerview_cancel">cancel</string>
    <string name="pickerview_submit">submit</string>
    <string name="pickerview_year">y</string>
    <string name="pickerview_month">m</string>
    <string name="pickerview_day">day</string>
    <string name="pickerview_hours">h</string>
    <string name="pickerview_minutes">m</string>
    <string name="pickerview_seconds">s</string>
    <string name="pickerview_ampm"></string>
    <string name="done">Done</string>
    <string name="select_business_category">Select Business Category</string>
    <string name="my_shop">My Shop</string>
    <string name="analytics">Analytics</string>
    <string name="share">Share</string>
    <string name="chat">Chats</string>
    <string name="add_product">Add Product</string>
    <string name="click_here_n_nto_add_products_n_amp_services"><![CDATA[Click Here \n\nTo Add Products \n& Services]]></string>
    <string name="ratings">Ratings</string>
    <string name="_0">0</string>
    <string name="followers">Followers</string>
    <string name="deals_">Deals</string>
    <string name="upload_images">Upload Images</string>
    <string name="add_image">Add Image</string>
    <string name="description">Description</string>
    <string name="describe_your_product_or_service_nwith_accurate_and_detailed_information_for_nexample_n100_pure_cotton_full_sleeves_white_shirt_nfrom_zara">Describe your Product or Service \nwith accurate and detailed information For \nexample. \n"100% pure cotton full sleeves white shirt \nfrom zara"</string>
    <string name="delivery_radius">Delivery Radius</string>
    <string name="category">Category</string>
    <string name="asking_price">Asking Price</string>
    <string name="iqd">IQD</string>
    <string name="_1000">1000</string>
    <string name="hashtags_0">Hashtags : 0</string>
    <string name="profile_settings"><![CDATA[Profile & Settings]]></string>
    <string name="delivery_address">Delivery Address</string>
    <string name="edit">Edit</string>
    <string name="payment_pref">Payment Preference</string>
    <string name="location">Location</string>
    <string name="notification">Notification</string>
    <string name="invite_friend">Tell a Friend</string>
    <string name="language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="design_shoe">Design Shoe</string>
    <string name="shakomako_id">ShakoMako ID:</string>
    <string name="personal_account">Personal Account</string>
    <string name="vender_id">Vender ID :</string>
    <string name="business_my_deals">Business | My Deals</string>
    <string name="ici">ICI</string>
    <string name="paid">Paid</string>
    <string name="rate">Rate</string>
    <string name="done_deals">Done Deals</string>
    <string name="pending_deals">Pending Deals</string>
    <string name="search">Search</string>
    <string name="item_463">Item:463</string>
    <string name="pending_verification">Pending Verification</string>
    <string name="completed">Completed</string>
    <string name="in_completed">Incompleted</string>
    <string name="complete">Complete</string>
    <string name="business_verify">Business | Verify</string>
    <string name="_30_done_deal_status">30 Done Deal Status:</string>
    <string name="gender">Gender</string>
    <string name="pending">Pending</string>
    <string name="earning">Total Earning</string>
    <string name="customer">Customers</string>
    <string name="insight">Insight</string>
    <string name="presonal_verify">Presonal | Verify</string>
    <string name="following">Following</string>
    <string name="rating">Rating</string>
    <string name="full_name">Full Name:</string>
    <string name="customer_id">Customer ID:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="national_id">National ID:</string>
    <string name="_5_done_deal_status">5 Done Deal Status:</string>
    <string name="account_credited">Account Credited</string>
    <string name="agerange">Age Range</string>
    <string name="analytics_customer">Analytics | Customer</string>
    <string name="add_address">Add Address</string>
    <string name="add_delivery_address">Add Delivery Address</string>
    <string name="shakomako_label">ShakoMako Label:</string>
    <string name="enter">Enter</string>
    <string name="enter_building_number">Enter building number</string>
    <string name="enter_street_name">Enter street name</string>
    <string name="enter_district">Enter district</string>
    <string name="enter_city">Enter city</string>
    <string name="enter_country">Enter country</string>
    <string name="save_address">Save Address</string>
    <string name="building_number">Building Number:</string>
    <string name="street_name">Street Name:</string>
    <string name="district">District:</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>
    <string name="follow">Follow</string>
    <string name="delivery_fee">Delivery Fee:</string>
    <string name="product_deal_price">Product Deal Price:</string>
    <string name="notes">Notes:</string>
    <string name="quantity">Quantity:</string>
    <string name="product_id">Product ID:</string>
    <string name="product">Product:</string>
    <string name="text_delivery_address">Delivery Address:</string>
    <string name="text_customer_id">Customer ID:</string>
    <string name="text_full_name">Full Name:</string>
    <string name="username">Username:</string>
    <string name="total_deal_price">Total Deal Price :</string>
    <string name="design_shoes">Design Shoes</string>
    <string name="long_text">Located in Aziz district we have been supplying footwear for over 15 years and offer a show for anyone and any occasion. Please contact us for deals</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="likes">Likes</string>
    <string name="in_chat_invoice_ici">In-Chat-Invoice (ICI)</string>
    <string name="lipsticking">Lipsticking</string>
    <string name="_1200_iqd">1200 IQD</string>
    <string name="details">Details</string>
    <string name="related">Related</string>
    <string name="overview">Overview</string>
    <string name="hashtags">Hashtags</string>
    <string name="something_went_wrong_with_business_id">Something went wrong with business id</string>
    <string name="please_fill_asking_price">Please Fill Asking Price</string>
    <string name="please_select_category">Please Select Category</string>
    <string name="please_fille_radius">Please Fill Radius</string>
    <string name="please_fill_product_description">Please Fill Product Description</string>
    <string name="please_select_product_images">Please Select Product Images</string>
    <string name="personal">Personal</string>
    <string name="business">Business</string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="sort_by">Sort By</string>
    <string name="filter">Filter</string>
    <string name="filterby">Filter By</string>
    <string name="brand">Brand</string>
    <string name="clear_all">Clear all</string>
    <string name="apply">apply</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="privacy_policy_cont">Welcome! Please Tap Agree &amp; Continue to accept our <font fgcolor="#1E90FF">Terms of Service &amp; Privacy Policy</font></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="agree_and_cont">Agree &amp; Continue</string>
    <string name="msg_image_permission_not_granted">Unable to open image. Permission is not granted!</string>
    <string name="text_select_image">Select image</string>
    <string name="text_accept_permission">Accept permission</string>
    <string name="msg_please_allow_us_to_use_permission">Please allow us to use these permissions</string>
    <string name="text_open_setting">Open application settings</string>
    <string name="msg_max_images_limit">Only 4 images allowed</string>
    <string name="no_data_available">No data to show</string>
    <string name="support">Support</string>
    <string name="logout_text_heading">Are you sure you want to\nlogout?</string>
    <string name="cancel">Cancel</string>
    <string name="something_went_wrong_with_product_id">Something went wrong with product id</string>
    <string name="please_fill_lable">ShakoMako Label: can\'t be empty</string>
    <string name="please_fill_building_number">Building Number: can\'t be empty</string>
    <string name="please_fill_streetname">Street Name: can\'t be empty</string>
    <string name="please_fill_district">District: can\'t be empty</string>
    <string name="please_fill_city">City: can\'t be empty</string>
    <string name="please_fill_country">Country: can\'t be empty</string>
    <string name="delete">Delete</string>
    <string name="start_typing">Start Typing</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="msg_allow_us_location_permission">Allow us to detect your current location</string>
    <string name="msg_permission_denied_not_able_detect_location">We are not able to detect your current location</string>
    <string name="select_location">Select Location</string>
    <string name="chat_">Chat</string>
    <string name="delivery_address_not_shared">Delivery address not shared</string>
    <string name="cod_exchanged">COD Exchanged</string>
    <string name="yes">YES</string>
    <string name="my_likes">My Likes</string>
    <string name="unfollow">Unfollow</string>
    <string name="ici_number">ICI Number</string>
</resources>