<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/logo"
            android:padding="@dimen/_20sdp"
            android:scaleType="centerInside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_facebook"
            style="@style/Widget.ShakoMako.Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/faceebook_bg"
            app:drawableLeftCompat="@drawable/ic_facebook_circular_logo"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/cont_facebook" />


        <TextView
            android:id="@+id/tv_google"
            style="@style/Widget.ShakoMako.Text.Body.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/google_bg"
            app:drawableLeftCompat="@drawable/ic_search"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/cont_google" />

        <TextView
            android:id="@+id/tv_instagram"
            style="@style/Widget.ShakoMako.Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/faceebook_bg"
            app:drawableLeftCompat="@drawable/ic_instagram"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/cont_insta" />

        <TextView
            android:id="@+id/tv_number"
            style="@style/Widget.ShakoMako.Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/number_bg"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/cont_number"
            app:drawableLeftCompat="@drawable/ic_smartphone" />


    </LinearLayout>


</layout>
