<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewHandler"
            type="com.io.app.shakomako.helper.callback.ViewClickCallback" />

        <variable
            name="dealsData"
            type="com.io.app.shakomako.api.pojo.deal.PendingDealsResponse" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <RelativeLayout
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp">

                <ProgressBar
                    android:id="@+id/progressBarMedium"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/colorPrimary" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_product"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/shoe_one" />





            </RelativeLayout>



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Widget.ShakoMako.Text.Small.Black"
                    android:layout_width="wrap_content"
                    android:text="@{dealsData.business_name}"
                    tools:text="@string/design_shoe" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Widget.ShakoMako.Text.Tiny.Black"
                    android:text="@{@string/item_463 + dealsData.product_id}"
                    tools:text="@string/item_463" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_chat" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Widget.ShakoMako.Text.Tiny.Black"
                    android:text="@string/chat" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_ici"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:gravity="center"
                android:onClick="@{viewHandler::onClick}"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_ici_gray" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Widget.ShakoMako.Text.Tiny.Black"
                    android:text="@string/ici" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/pay" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Widget.ShakoMako.Text.Tiny.Black"
                    android:text="@string/paid" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/grey" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Widget.ShakoMako.Text.Tiny.Black"
                    android:text="@string/rate" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</layout>